<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/background_white"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/am_iv_user_image"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/naufal_aldy"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/am_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/am_iv_user_image"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/hai_naufal"
        android:textColor="@color/primary_brown"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/am_tv_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/am_iv_user_image"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/playfair_display_bold"
        android:text="@string/main_heading"
        android:textColor="@color/primary_brown"
        android:textSize="32sp" />

    <TextView
        android:id="@+id/am_tv_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/am_tv_heading"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/main_subtitle"
        android:textColor="@color/primary_brown"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/am_rv_destination"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/am_tv_recommendation"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_cardview_destination" />




</RelativeLayout>