<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DestinationDetailsActivity"
    android:fillViewport="true"
    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/add_iv_photo"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/recycler_image"
            tools:src="@tools:sample/backgrounds/scenic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/add_tv_destination"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@color/primary_brown"
                android:textSize="24sp"
                tools:text="Nama Destinasi" />

            <TextView
                android:id="@+id/add_tv_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_tv_destination"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/young_brown"
                android:textSize="16sp"
                tools:text="Nama Lokasi" />

            <TextView
                android:id="@+id/add_tv_destination_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="48dp"
                android:layout_marginTop="28dp"
                android:drawableStart="@drawable/star"
                android:drawablePadding="4dp"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/blue_rating"
                tools:ignore="RelativeOverlap"
                tools:text="4.5" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_tv_location"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/about"
                android:textColor="@color/primary_brown"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/add_tv_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/about"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/primary_brown"
                tools:text="Deskripsi about" />

            <TextView
                android:id="@+id/add_tv_pricesholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_tv_details"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/idr"
                android:textColor="@color/primary_brown"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/add_tv_prices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/add_tv_details"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_toEndOf="@id/add_tv_pricesholder"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/primary_brown"
                android:textSize="20sp"
                tools:text="8.000.000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/add_tv_pricesholder"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:gravity="bottom|center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_bt_ticket"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="2"
                    android:text="@string/beli_tiket" />

                <Button
                    android:id="@+id/add_bt_share"
                    android:layout_width="wrap_content"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/accent_yellow"
                    android:text="@string/share" />
            </LinearLayout>




        </RelativeLayout>
    </LinearLayout>
</ScrollView>